--- a/src/shared/login/login/login.component.html
+++ b/src/shared/login/login/login.component.html
@@ -2,15 +2,15 @@
     <form>
         <h1>Login</h1>
         <div class="username">
-            <label for="">username</label>
-            <input type="email" />
+            <label>username</label>
+            <input type="text" />
         </div>
 
         <div class="password">
-            <label for="">password</label>
+            <label>password</label>
             <input type="password" />
         </div>
         <p>Forgot password?</p>
-        <button>Login</button>
+        <button type="submit">Login</button>
     </form>
 </div>
