--- a/src/shared/pages/feed/feed.component.css
+++ b/src/shared/pages/feed/feed.component.css
@@ -1,3 +1,9 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 app-search{
     display: flex;
     justify-content: center;
