--- a/src/features/header/header/header.component.html
+++ b/src/features/header/header/header.component.html
@@ -1,4 +1,9 @@
 <nav>
+    <img src="https://cdn.pixabay.com/photo/2014/04/03/00/42/footprints-309158_960_720.png" alt="patas de gato">
+    <div class="left">
+        <img [src]="tema" alt="icone sol/lua" (click)="trocarTema()">
+        <h1>InstaCat</h1>
+    </div>
     <ul>
         <li>Home</li>
         <li>Feed</li>
