--- a/src/features/header/header/header.component.css
+++ b/src/features/header/header/header.component.css
@@ -17,7 +17,7 @@ nav{
 
     padding-right: 100px;
   
-    background-color: tomato;
+    background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 49%, rgba(252,176,69,1) 100%);
 }
 .left{
     display: flex;
