--- a/src/shared/card/card/card.component.css
+++ b/src/shared/card/card/card.component.css
@@ -18,7 +18,7 @@
     width: 100%;
     height: 100%;
 
-    background-color: #ffffffb9;
+    background-color: #ffffffe8;
 }
 .close{
     display: flex;
@@ -36,6 +36,8 @@
 .post{
     height: 400px;
     width: 600px;
+
+    border-radius: 10px;
 }
 .infos{
     display: flex;
