--- a/src/shared/gallery/search/search.component.css
+++ b/src/shared/gallery/search/search.component.css
@@ -3,11 +3,39 @@
     padding: 0;
     box-sizing: border-box;
 }
+.container-feed{
+    width: 100%;
+    height: 110%;
+
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 10px;
+
+    padding: 0px 30px;
+}
+.tema img{
+    height: 50px;
+}
+.tema{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+
+    padding-left: 180px;
+
+    position: fixed;
+    top: 0;
+
+    height: 100px;
+    width: 100%;
+}
 .input-search{
     display: flex;
     justify-content: center;
 
-    margin-top: 100px;
+    margin-top: 120px;
+    margin-bottom: 10px;
     width: 100vw;
 }
 input{
